src/test/deca/context/valid/Objet/Mod-Field.deca
// Description:
//      Doing operations on  public fields in main
//
// Results:
//      nothing
//
// History:
//      created on 19/1/2022

class A {
    int x;
}

class B {
    int x;
}

{
    A a = new A();
    B b = new B();
    int y = a.x % b.x;
}