src/test/deca/context/invalid/SansObjet/DeclVar-Mod-int-int-float.deca
// Description:
//    Declaration of a int variable using % operation between a int variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  20; 
    float y = 1.5; 
    int z = x % y ; 
}
